--- a/public/stylesheets/bachelor.css
+++ b/public/stylesheets/bachelor.css
@@ -1,10 +1,45 @@
+#bachelor-container {
+    display: flex;
+    width: 100%;
+    padding: 2vw;
+    position: relative;
+    gap: 3vw 0;
+
+}
+
+#bachelor-container #list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 20%;
+    align-items: flex-end;
+    justify-content: flex-start;
+    text-align: right;
+    position: sticky;
+    top: 2vw;
+    height: fit-content;
+
+}
+
+#bachelor-container #list a {
+    color: blue;
+    /* filter: drop-shadow(0px 1px 1px black); */
+    text-decoration: wavy;
+    padding: 2px 0;
+    border-bottom: 1px solid gray;
+}
+
+#bachelor-container #list a:hover {
+    color: rgba(75, 75, 250, 0.866)
+}
+
+
 #bachelor {
     width: 70%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     gap: 2vw;
-    padding: 2vw;
     min-height: 100vh;
 }
 
@@ -33,6 +68,7 @@
 
 #description p {
     color: #111;
+    letter-spacing: 1px;
 }
 
 #semister {
@@ -67,6 +103,27 @@
     color: #111;
 }
 
+
+#afflication-university table {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-collapse: collapse;
+    text-align: left;
+}
+
+td,
+th {
+    padding: 10px 20px;
+    border: 1px solid black;
+    text-transform: capitalize;
+    color: #111;
+}
+
+th {
+    font-size: 20px;
+}
+
 @media (max-width: 980px) {
     #bachelor {
         width: 100%;
@@ -81,5 +138,16 @@
         text-align: center;
         text-wrap: nowrap;
         font-size: 18px;
+    }
+
+
+
+    #bachelor-container {
+        flex-direction: column;
+    }
+
+    #bachelor-container #list {
+        width: 100%;
+        position: initial;
     }
 }
