--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -15,7 +15,8 @@
     min-height: 40vh;
     min-height: 40vh;
     width: 100vw;
-    background-color: var(--color-one);
+
+    background: hsl(0, 0%, 70%);
     display: flex;
     justify-content: space-evenly;
 
