--- a/public/stylesheets/hseb.css
+++ b/public/stylesheets/hseb.css
@@ -1,9 +1,47 @@
+#hseb-container {
+    display: flex;
+    width: 100%;
+    padding: 2vw;
+    position: relative;
+    padding: 2vw;
+
+}
+
+#hseb-container #list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 20%;
+    align-items: flex-end;
+    justify-content: flex-start;
+    text-align: right;
+    position: sticky;
+    top: 2vw;
+    height: fit-content;
+
+}
+
+#hseb-container #list a {
+    color: blue;
+    /* filter: drop-shadow(0px 1px 1px black); */
+    text-decoration: wavy;
+    padding: 2px 0;
+    border-bottom: 1px solid gray;
+}
+
+#hseb-container #list a:hover {
+    color: rgba(75, 75, 250, 0.866)
+}
+
+
+
+
+
 #hseb {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     gap: 2vw;
-    padding: 2vw 0;
     width: 70%;
     min-height: 100vh;
     text-align: left;
@@ -26,54 +64,56 @@
     height: 50vh;
 }
 
-#description 
-{
+#description {
     display: flex;
     flex-direction: column;
     gap: 10px;
     text-align: justify;
 }
-#description  p 
 
-{
+#description p {
     color: #111;
 }
 
 
 #course-structure {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     gap: 10px;
 }
 
-#hseb h2 {
-    color: black;
-}
-
-#hseb table {
-    border-collapse: collapse;
-    width: 100%;
-    color: black;
-}
-th 
-{
+#hseb-container h3,
+#hseb-container h2 {
+    letter-spacing: 1px;
     font-weight: bold;
-    font-size: x-large;
+    color: #111;
 }
 
-th,
-tr,
-td {
-    padding: 20px;
-    color: black;
-    /* border: 1px solid black; */
+#course-structure ul {
+    width: 50%;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    justify-content: flex-start;
 }
 
+#course-structure ul li {
+    color: #111;
+}
 
 @media (max-width: 980px) {
-    #hseb
-    {
+    #hseb {
         width: 100%;
         padding: 2vw;
+    }
+
+    #hseb-container {
+        flex-direction: column;
+    }
+
+    #hseb-container #list {
+        width: 100%;
+        position: initial;
     }
 }
