--- a/public/stylesheets/template.css
+++ b/public/stylesheets/template.css
@@ -9,17 +9,21 @@
     padding: 3vw 0;
 }
 
-h1 {
+#content-body h1 {
     color: #222;
     text-transform: uppercase;
 }
 
+#content-body p 
+{
+    color: #111;
+}
 #img-wrap {
     width: 100%;
     height: 50vh;
 }
 
-img {
+#content-body img {
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -33,47 +37,41 @@ img {
 
 #description p {
     letter-spacing: 1px;
-    font-size: 23px;
-    text-align: center;
+    text-align: justify;
     color: #333;
 }
 
 
-#people {
+#why-hcc {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 20px;
-    width: 100%;
-    height: auto;
-    text-align: center;
-
-}
-
-#each-people img {
-    height: 70%;
-    width: 70%;
-    border: 1px solid gray;
-}
-
-#each-people {
-    min-height: 300px;
-    width: 300px;
-    background: #fff;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
     flex-direction: column;
-    padding: 20px;
-    align-items: center;
     gap: 20px;
-}
-
-#each-people p {
-    height: auto;
     color: #111;
 }
 
-#each-people h2 {
+#why-hcc strong {
+    color: #000;
+    letter-spacing: 1px;
+    font-size: large;
+}
+
+#why-hcc p {
+    color: #333;
+
+}
+
+#why-hcc h3 {
+    letter-spacing: 1px;
+    color: #000;
+    font-size: 20px;
+}
+
+#why-hcc h2 {
     color: #111;
+    text-transform: uppercase;
+}
+
+#why-hcc h1 {
+    color: #000;
+    text-transform: uppercase;
 }
