--- a/views/header.ejs
+++ b/views/header.ejs
@@ -30,10 +30,10 @@
 <body>
 
     <div id="navbar">
-        <div href="" id="logo">
+        <a href="/" id="logo">
             <img src="/images/logo.jpg" alt="">
-            <a href="">Hetauda city college</a>
-        </div>
+            <span>Heatuda City College</span>
+        </a>
 
         <div id="right-nav">
             <a href="">Apply Now</a>
