--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,17 +6,18 @@
   box-sizing: border-box;
   color: white;
 }
-img 
-{
-  background: gray;
+
+img {
+  background: hsl(0, 0%, 70%);
 }
+
 
 html,
 body {
   height: 100%;
   width: 100%;
   background: #dadada;
-  overflow-x: hidden  ;
+  overflow-x: hidden;
 }
 
 
@@ -30,16 +31,20 @@ body::-webkit-scrollbar {
 
 /* Track (the area where the thumb and the track meet) */
 body::-webkit-scrollbar-track {
-  background-color: red; /* Set the background color of the track */
+  background-color: red;
+  /* Set the background color of the track */
 }
 
 /* Handle (the draggable part of the scrollbar) */
 body::-webkit-scrollbar-thumb {
-  background-color: #888; /* Set the color of the scrollbar thumb */
-  border-radius: 1px; /* Set the border radius to round the corners of the thumb */
+  background-color: #888;
+  /* Set the color of the scrollbar thumb */
+  border-radius: 1px;
+  /* Set the border radius to round the corners of the thumb */
 }
 
 /* Handle on hover */
 body::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Change the color on hover */
+  background-color: #555;
+  /* Change the color on hover */
 }
