--- a/public/stylesheets/template.css
+++ b/public/stylesheets/template.css
@@ -14,13 +14,13 @@
     text-transform: uppercase;
 }
 
-#content-body p 
-{
+#content-body p {
     color: #111;
 }
+
 #img-wrap {
     width: 100%;
-    height: 50vh;
+    min-height: 0;
 }
 
 #content-body img {
@@ -74,4 +74,11 @@
 #why-hcc h1 {
     color: #000;
     text-transform: uppercase;
+}
+
+@media (max-width: 980px) {
+    #content-body {
+        width: 100%;
+        padding: 2vw;
+    }
 }
